# charity-match

./: .env.example  .gitignore  LICENSE  README.md  deployment.md  package-lock.json  package.json
.github/workflows/: ci.yml
app/: error-listener.tsx  globals.css  layout.tsx  page.tsx  wallet-context.tsx
app/campaign/[id]/: page.tsx
app/create/: page.tsx
components/: balance-card.tsx  campaign-card.tsx  dashboard.tsx  event-feed.tsx  hero-section.tsx  stats-strip.tsx  wallet-button.tsx
contract/: Cargo.toml
contract/main/: Cargo.toml
contract/main/src/: lib.rs  test.rs
contract/main/test_snapshots/test/: cannot_refund_after_close.1.json  create_campaign_increments_id_and_list.1.json  donations_after_deadline_blocked.1.json  donations_are_matched_one_to_one.1.json  matching_caps_at_sponsor_limit.1.json  non_sponsor_cannot_close.1.json  refund_when_deadline_passes_without_close.1.json  sponsor_closes_and_payout_is_donated_plus_matched.1.json  unique_donor_count_dedupes.1.json
hooks/: use-balance.ts  use-campaign.ts  use-contract-events.ts  use-global-stats.ts  use-send-tx.ts
lib/: errors.ts  events.ts  soroban.ts  stellar.ts  wallets.ts
scripts/: deploy.sh
