[workspace]
resolver = "2"
# `receipt` is removed by new-project.sh when uses_custom_token: false in SPEC.md.
members = ["main"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
